--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9528,12 +9528,14 @@ a:hover {
   width: 100%;
   float: left;
 }
-/* line 9, ../scss/_writing-footer.scss */
-#writing #footer .content {
-  padding-right: 12%;
-  padding-left: 12%;
+@media only screen and (min-width: 40.063em) {
+  /* line 9, ../scss/_writing-footer.scss */
+  #writing #footer .content {
+    padding-right: 12%;
+    padding-left: 12%;
+  }
 }
-/* line 14, ../scss/_writing-footer.scss */
+/* line 16, ../scss/_writing-footer.scss */
 #writing #footer h4 {
   border-top: 1px solid grey;
   padding-top: 1.5em;
